# TMC2209_Raspberry_Pi

./: .gitignore  .markdownlint.json  CHANGELOG.md  LICENSE  README.md  TMC_2209_StepperDriver.py  TMC_2209_reg.py  TMC_2209_uart.py  build_and_install.sh  setup.cfg  test_script_03_basic_movement.py  test_script_tmc.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_board_request.md  uart_problem_report.md
.github/workflows/: markdownlint.yml  pylint.yml  test.yml  unittest.yml
TMC_2209/: TMC_2209_StepperDriver.py  TMC_2209_reg.py  TMC_2209_uart.py
demo/: debug_script_01_uart_connection.py  demo_script_01_uart_connection.py  demo_script_02_pin_connection.py  demo_script_03_basic_movement.py  demo_script_04_stallguard.py  demo_script_05_vactual.py  demo_script_06_multiple_drivers.py  demo_script_07_threads.py  demo_script_08_log_to_file.py  demo_script_09_uartless.py  demo_script_10_only_step_pin.py  demo_script_11_continous_movement.py  demo_script_12_tmc2240.py  test_script_03_basic_movement.py  test_script_07_threads.py
docs/: README_PyPI.md
src/tmc2209/: tmc_2209.py  (+5 more)
tests/: debug_script_01_uart_connection.py  test_TMC_2209_math.py  test_TMC_2209_move.py  test_TMC_2209_uart.py  test_script_01_uart_connection.py  test_script_02_pin_connection.py  test_script_03_basic_movement.py  test_script_04_stallguard.py  test_script_05_vactual.py  test_script_06_multiple_drivers.py  test_script_07_threads.py  test_tmc2209.py  test_tmc2240.py  test_tmc_com_spi.py  test_tmc_com_uart.py  test_tmc_ec_pin.py  test_tmc_math.py  test_tmc_move.py  test_tmc_uart.py
(+93 files in other folders)
