[metadata]
name = TMC_2209_Raspberry_Pi
version = 0.1.1
author = Christian Köhlke
author_email = christian@koehlke.de
description = this is a Python libary to drive a stepper motor with a Trinamic TMC2209 stepper driver and a Raspberry Pi
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Chr157i4n/TMC2209_Raspberry_Pi
project_urls =
    Bug Tracker = https://github.com/Chr157i4n/TMC2209_Raspberry_Pi/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Natural Language :: English
    Topic :: System :: Hardware :: Hardware Drivers

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.0.0
install_requires =
    RPi.GPIO
    enum34
    gpiozero
    bitstring
    pyserial

[options.packages.find]
where = src